# asta-plugins

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mise.toml  DEVELOPER.md  Dockerfile  Makefile  README.md  pyproject.toml
.asta/auto-exp-designer/: index.yaml
.asta/auto-exp-designer/.cache/: search.db
.asta/auto-exp-designer/2026-05-05-llm-arithmetic-mechanisms/: experiment_design.html  index.html  manifest.json  summary.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  docker.yml  workspace-quarto-site.yml
commands/: find-papers.md  generate-report.md
docs/: theorizer-skill-rewrite-plan.md
hooks/: approve-asta-bash.sh  hooks.json  sync-cli-version.sh
plugins/: README.md
plugins/asta-flows/hooks/: approve-bd-bash.sh  hooks.json
plugins/asta-preview/hooks/: sync-cli-version.sh
plugins/asta-tools/hooks/: approve-asta-bash.sh  approve-bd-bash.sh  hooks.json  sync-cli-version.sh
plugins/asta/hooks/: approve-asta-files.sh  hooks.json  sync-cli-version.sh
plugins/asta/shared-patterns/: voice-and-tone.md
scripts/: build-plugins.sh  compile-schemas.py  docker-skill-discovery-test.sh  docker-smoke-test.sh  manage-version.py  validate-skills.py  verify-plugin-install.sh
servers/paper-finder/: asta_paper_finder.py  find_papers.py  pyproject.toml
shared-patterns/: SKILL-BOILERPLATE.md  installation.md
skills/allen-dataset-search/: SKILL.md  bootstrap-datasets.sh
skills/analyze-data/: SKILL.md
skills/artifacts/: SKILL.md
skills/asta-agent-protocol/: SKILL.md
skills/asta-documents/: SKILL.md
skills/auto-exp-designer/: SKILL.md
skills/autodiscovery/: SKILL.md
skills/brain-cell-atlas/: SKILL.md
skills/experiment/: SKILL.md
skills/find-literature/: SKILL.md
skills/generate-theories/: SKILL.md  UX Questions.md
skills/literature-report/: SKILL.md
skills/literature-research/: SKILL.md
skills/literature-understanding/: SKILL.md
skills/local-paper-index/: SKILL.md
skills/map-my-cells/: SKILL.md
skills/pdf-extract/: SKILL.md
skills/pdf-extraction/: SKILL.md
skills/pdf-ocr/: SKILL.md
skills/preview/: SKILL.md
skills/research-step/: SKILL.md
skills/semantic-scholar/: SKILL.md
src/asta/: __init__.py  auto_exp_designer.py  cli.py  theorizer.py
src/asta/auth/: __init__.py  (+5 more)
tests/: _a2a_fixtures.py  test_a2a_artifact.py  test_a2a_interactive.py  test_a2a_stream.py  test_analyze_data.py  test_asta_server.py  test_auth.py  test_auth_helper.py  test_auth_status_enhanced.py  test_cli.py  test_client.py  test_config.py  test_data_analysis.py  test_followup_cli.py  test_hooks.py  test_integration.py  test_interactive.py  test_literature_interactive.py  test_models.py  test_paper_finder.py  test_papers_cli.py  test_patents_cli.py  test_pdf.py  test_skills.py  test_thread_state.py  test_threads.py
(+382 files in other folders)
