[project]
name = "asta-plugins"
version = "0.1.0"
description = "Asta science tools for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "requests>=2.31",
    "asta-paper-finder",
]

[tool.uv.sources]
asta-paper-finder = { path = "servers/paper-finder", editable = true }

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests", "servers/paper-finder"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
