[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asta"
version = "0.3.0"
description = "Asta CLI for scientific literature review"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyhocon>=0.3.60",
]

[project.scripts]
asta = "asta.cli:cli"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "requests>=2.31",
]

[tool.uv.sources]

[tool.hatch.build.targets.wheel]
packages = ["src/asta"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]
